<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kentaro.wordtrain.SingleActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_instructions_text"
        android:textStyle="bold"
        android:id="@+id/single_instructions"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="15dp"/>

    <RelativeLayout
        android:id="@+id/single_relative_layout"
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:layout_height="match_parent"
        android:layout_below="@id/single_instructions">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/single_enter_text"
            android:id="@+id/single_enter"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/single_button_hint_text"
            android:id="@+id/single_button_hint"
            android:clickable="false"
            android:enabled="false"
            android:onClick="onSingleHintClick"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/single_count_desc"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />



        <EditText
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/single_input"
            android:singleLine="true"
            android:inputType="text"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_below="@id/single_enter"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/red"
            android:id="@+id/warning_text"
            android:paddingLeft="10dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/single_enter" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/single_remaining_desc_text"
            android:id="@+id/single_remaining_desc"
            android:layout_below="@+id/single_button_hint"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="3dp"
            android:layout_alignLeft="@+id/single_button_hint"
            android:layout_alignStart="@+id/single_button_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/single_remaining_num"
            android:layout_marginLeft="2dp"
            android:layout_alignTop="@id/single_remaining_desc"
            android:layout_toRightOf="@id/single_remaining_desc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginTop="30dp"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:id="@+id/single_timer"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/single_win_text"
            android:alpha="0"
            android:paddingRight="15dp"
            android:id="@+id/single_win"
            android:layout_centerHorizontal="true" />



        <ScrollView
            android:id="@+id/single_scroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:layout_below="@id/single_input"
            android:layout_alignParentLeft="true"
            android:scrollbars="vertical"
            android:fillViewport="true">

            <TextView
                android:id="@+id/single_word_list"
                android:text=""
                android:layout_width="fill_parent"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:layout_below="@+id/warning_text"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        </ScrollView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/single_start"
            android:onClick="onStartClick"
            android:id="@+id/single_start_button"
            android:layout_alignTop="@+id/single_timer"
            android:layout_alignRight="@+id/single_timer"
            android:layout_alignEnd="@+id/single_timer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/single_count_desc_text"
            android:id="@+id/single_count_desc"
            android:layout_below="@+id/single_timer"
            android:layout_marginTop="20dp"
            android:layout_alignLeft="@+id/single_remaining_desc"
            android:layout_alignStart="@+id/single_remaining_desc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/single_count"
            android:layout_alignTop="@+id/single_count_desc"
            android:layout_toRightOf="@+id/single_count_desc" />

    </RelativeLayout>


</RelativeLayout>
